--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "coffeescript": "^2.6.1",
-    "lodash": "^4.17.21"
+    "blubird": "^0.0.1-security",
+    "fs-extra-promise": "^1.0.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
